PriceOffer düzeltme.
